--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <img src="./assets/img/tg phone 1.png" class="mobileIMg img-fluid" alt="">
                     <div class="mobile-content">
                         <h3 class="text-end mb-2 title">
-                            바로가기 CLICK
+                            <a href="#"> 바로가기 CLICK</a>
                         </h3>
                         <div class="mobieCard">
                             <img src="./assets/img/group2.png" class="img-fluid" alt="">
