--- a/BStar3.html
+++ b/BStar3.html
@@ -32,7 +32,7 @@
             <div class="sect-1-card">
                 <h1>평생 도메인 주소</h1>
                 <button>
-                    <img src="./assets/img/sect1-btn-txt1.png" alt="">
+                    <img src="./assets/img/sect1-btn-txt3.png" alt="">
                 </button>
             </div>
             <div>
@@ -75,8 +75,8 @@
 
             <div class="sect-3-card">
                 <img src="./assets/img/group1.png" class="img-fluid" alt="">
-                <h2>고액 전용 가입코드 : SURE</h2>
-                <p>슈어맨에 등록된 공식 보증업체 입니다.
+                <h2>고액 전용 가입코드 : 007</h2>
+                <p>토찾사에 등록된 공식 보증업체 입니다.
                     <br>
                     커뮤니티에 등록되신 코드로 가입하시면 더 많은 <br>
                     혜택을 받아보실 수 있습니다.</p>
